syntax = "proto3";
package ostracon.types;

option go_package = "github.com/line/ostracon/proto/ostracon/types";

import "gogoproto/gogo.proto";
import "ostracon/crypto/keys.proto";

message ValidatorSet {
  repeated Validator validators = 1;
  // Validator          proposer           = 2;   // This field has been removed in Ostracon.
  int64 total_staking_power = 3;
}

message Validator {
  bytes                     address           = 1;
  ostracon.crypto.PublicKey pub_key           = 2 [(gogoproto.nullable) = false];
  int64                     staking_power     = 3;
  int64                     proposer_priority = 4;

  // *** Ostracon Extended Fields ***
  int64 voting_power = 1000;
}

message SimpleValidator {
  ostracon.crypto.PublicKey pub_key       = 1;
  int64                     staking_power = 2;
}
