syntax = "proto3";
package ostracon.types;

option go_package = "github.com/line/ostracon/proto/ostracon/types";

import "ostracon/types/validator.proto";

message VoterSet {
  repeated ostracon.types.Validator voters             = 1;
  int64                             total_staking_power = 2;
}

message VoterParams {
  int32 voter_election_threshold           = 1;
  int32 max_tolerable_byzantine_percentage = 2;
}
